--- a/css.css
+++ b/css.css
@@ -1,5 +1,8 @@
+.main {
+    padding: 0 40px;
+}
 header {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     background-color: black;
     background-blend-mode: darken;
 }
@@ -32,12 +35,12 @@ a {
 header {
     display: flex;
     justify-content: space-between;
-    border: 2px solid green
+    /* border: 2px solid green */
 }
 
 .header2 {
     padding-top: 20px;
-    border: 2px solid cyan;
+    /* border: 2px solid cyan; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -49,4 +52,104 @@ header {
 
 .bigRuneScape {
     text-transform: uppercase;
+}
+
+.arrow {
+    max-height: 50px;
+    /* border: 1px solid green; */
+}
+
+.currentlogo {
+    max-height: 100px;
+}
+
+.leftbox {
+    border: 2px solid red;
+    grid-area: leftbox;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.rightbox {
+    grid-area: rightbox;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.mid-mid {
+    border: 2px solid cyan;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-rows: 1fr auto 1fr; */
+    grid-template-areas:
+    'toptextleft toptextright'
+    'leftbox rightbox';
+}
+
+.toptextleft {
+    grid-area: toptextleft;
+  display: flex;
+  justify-content: center;
+}
+
+.toptextright {
+    grid-area: toptextright;
+    display: flex;
+    justify-content: center;
+}
+
+.currentlogo {
+    position: absolute;
+    /* justify-content: */
+    left: 300px;
+    bottom: 50px;
+
+    z-index: 2;
+}
+.currentlogoright {
+    position: absolute;
+    height: auto;
+    width: auto;
+    max-width: 300px;
+    /* justify-content: */
+    right: 300px;
+    bottom: 50px;
+
+    z-index: 2;
+}
+
+.a360gif {
+    position: relative;
+}
+.adiff360gif {
+    position: relative;
+}
+
+.buttons {
+    border: 2px solid purple;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    ' t1 t2 '
+    ' t3 t4 ';
+
+}
+
+.t1, .t2, .t3, .t4{
+    grid-area: t1;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    /* justify-content: center; */
+}
+
+.t3{
+    grid-area: t3;
+
+}
+.t4{
+    grid-area: t4;
 }
