--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
-.main {
+body {
     padding: 0 40px;
+    background-image: url(./media/rsmap.png);
 }
+
 header {
     /* border: 1px solid red; */
     background-color: black;
@@ -17,6 +19,8 @@ header {
 
 a {
     text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .OSRSlogo {
@@ -64,11 +68,12 @@ header {
 }
 
 .leftbox {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     grid-area: leftbox;
     display: flex;
     justify-content: center;
     align-content: center;
+    z-index: 0;
 }
 
 .rightbox {
@@ -76,22 +81,23 @@ header {
     display: flex;
     justify-content: center;
     align-content: center;
+    z-index: 0;
 }
 
 .mid-mid {
-    border: 2px solid cyan;
+    /* border: 2px solid cyan; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     /* grid-template-rows: 1fr auto 1fr; */
     grid-template-areas:
-    'toptextleft toptextright'
-    'leftbox rightbox';
+        'toptextleft toptextright'
+        'leftbox rightbox';
 }
 
 .toptextleft {
     grid-area: toptextleft;
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .toptextright {
@@ -101,21 +107,20 @@ header {
 }
 
 .currentlogo {
-    position: absolute;
-    /* justify-content: */
-    left: 300px;
-    bottom: 50px;
+    position: relative;
+    left: 100px;
+    bottom: 200px;
 
     z-index: 2;
 }
+
 .currentlogoright {
-    position: absolute;
+    position: relative;
     height: auto;
     width: auto;
     max-width: 300px;
-    /* justify-content: */
-    right: 300px;
-    bottom: 50px;
+    left: 100px;
+    bottom: 200px;
 
     z-index: 2;
 }
@@ -123,33 +128,85 @@ header {
 .a360gif {
     position: relative;
 }
+
 .adiff360gif {
     position: relative;
 }
 
 .buttons {
-    border: 2px solid purple;
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    ' t1 t2 '
-    ' t3 t4 ';
+    display: flex;
+    justify-content: space-between;
+    padding: 0 90px;
+
 
 }
 
-.t1, .t2, .t3, .t4{
-    grid-area: t1;
+.t1,
+.t2,
+.t3,
+.t4 {
     color: white;
     text-transform: uppercase;
     font-weight: bold;
     /* justify-content: center; */
+    background-color: rgb(52, 148, 184);
+    border-radius: 5px;
+    text-decoration: none;
+    border: none
 }
 
-.t3{
-    grid-area: t3;
+.t5 {
+    border: none;
+    background-color: transparent;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(247, 198, 0);
 
 }
-.t4{
-    grid-area: t4;
+
+.abovefootertext {
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    padding: 20px 370px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer {
+    background-color: black;
+    display: grid;
+    grid-template-rows: 1fr 2fr 2fr;
+    max-height: 300px;
+}
+
+.jagex {
+    /* border: 1px yellow solid; */
+    max-height: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.jagexlogo {
+    max-height: 100px;
+}
+
+.termlinks {
+    /* border: 2px red solid; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-height: 100px;
+    padding: 0 300px;
+    color: white;
+    text-decoration: none;
+}
+
+
+.picturelinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
